# ANTLR-Extras

./: Note.txt  README.md  pyproject.toml  visualizza_albero_entity.py  visualizza_albero_xml.py
xml_parser/: XMLLexer.py  XMLParser.py  XMLParserListener.py
